--- a/ingress-helm.yaml
+++ b/ingress-helm.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: kuber-app-ingress-helm
+  namespace: m
 spec:
   ingressClassName: nginx
   rules:
